# lab16

./: .gitignore  CMakeLists.txt  ChildrenCircle.cpp  ChildrenCircle.h  CircularDoubleList.cpp  CircularDoubleList.h  CircularList.cpp  CircularList.h  DoubleLinkedList.cpp  DoubleLinkedList.h  InputTask5.txt  Node.cpp  Node.h  OutputTask5.txt  _clang-format  _clang-tidy  main.cpp
